[package]
name = "nmd"
version = "0.1.0"
authors = ["Jason Sommer <j@jsdir.net>"]

[dependencies]
serde = "*"
serde_json = "*"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[dependencies.protobuf]
version = "*"

[dependencies.ws]
version = "*"

[dependencies.libnm]
path = "../libnm"

[dependencies.nalgebra]
version = "*"
